# phir

./: .buildinfo  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  genindex.html  index.html  modules.html  mypy.ini  objects.inv  phir.html  phir_spec_qasm.md  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  schema.json  search.html  searchindex.js  spec.md
.github/: dependabot.yml
.github/workflows/: python-app.yml  python-publish.yml
_sources/: index.rst.txt  modules.rst.txt  phir.rst.txt
docs/source/: conf.py  index.rst
phir/: __init__.py  cli.py  main.py  model.py  utils.py
tests/: cond_barrier_qparallel.json  example.json  test_main.py  test_model.py  test_utils.py
