[build-system]
requires = [
  "setuptools>=64",
  "setuptools_scm>=8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "phir"
description = "A data model and validation tool for PHIR (PECOS High-level Intermediate Representation)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Kartik Singhal", email = "kartik.singhal@quantinuum.com" },
  {name = "Ciarán Ryan-Anderson", email = "ciaran.ryan-anderson@quantinuum.com" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["pydantic", "rich"]

[project.optional-dependencies]
docs  = [
  "autodoc-pydantic",
  "pydata_sphinx_theme",
  "sphinx",
]
tests = ["pytest"]

[project.scripts]
phir-cli = "phir.cli:main"

[project.urls]
Changelog = "https://github.com/CQCL/phir/blob/main/CHANGELOG.md"
Documentation = "https://cqcl.github.io/phir/"
Repository = "https://github.com/CQCL/phir"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"phir" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
