[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phir"
description = "A data model and validation tool for PHIR (PECOS High-level Intermediate Representation)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kartik Singhal", email = "kartik.singhal@quantinuum.com" },
  { name = "Ciarán Ryan-Anderson", email = "ciaran.ryan-anderson@quantinuum.com" },
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "pydantic==2.10.6",
  "rich==13.9.4"
]

[dependency-groups]
dev = [
  "autodoc-pydantic==2.2.0",
  "mypy==1.14.1",
  "pre-commit==4.1.0",
  "pydata_sphinx_theme==0.16.1",
  "pyright==1.1.393",
  "pytest==8.3.4",
  "ruff==0.9.4",
  "sphinx==8.1.3",
]

[project.scripts]
phir-cli = "phir.cli:main"

[project.urls]
Changelog = "https://github.com/CQCL/phir/blob/main/CHANGELOG.md"
Documentation = "https://cqcl.github.io/phir/"
Repository = "https://github.com/CQCL/phir"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"phir" = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
